syntax = "proto3";

package agent_manager_grpc;

enum ModelProvider {
    ANTHROPIC = 0;
    BEDROCK = 1;
}
message Cookie {
    map<string, string> cookie_data = 1;
}

message RunAgentRequest {
    string prompt = 1;
    optional string session_id = 2;
    optional string request_api_key = 3;
    optional string parent_span_context = 4;
    optional ModelProvider model_provider = 5;
    optional string model = 6;
    optional bool enable_thinking = 7;
    repeated Cookie cookies = 8;
}

message ActionResult {
    optional bool is_done = 1;
    optional string content = 2;
    optional string error = 3;
    optional bool give_control = 4;
}

message StepChunkContent {
    ActionResult action_result = 1;
    string summary = 2;
    string trace_id = 3;
}

message AgentOutput {
    ActionResult result = 1;
    repeated Cookie cookies = 2;
    string trace_id = 3;
}

message RunAgentResponseStreamChunk {
    oneof chunk_type {
        StepChunkContent step_chunk_content = 1;
        AgentOutput agent_output = 2;
    }
}

service AgentManagerService {
    rpc RunAgent(RunAgentRequest) returns (AgentOutput);
    rpc RunAgentStream(RunAgentRequest) returns (stream RunAgentResponseStreamChunk);
}
